<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            app:title="@string/profile"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/image_material"
        android:layout_height="@dimen/image_material"
        android:layout_marginTop="@dimen/large"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_profile_filled"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_1"
        android:layout_marginStart="@dimen/standard"
        android:text="@string/name"
        android:textSize="@dimen/large_text_1"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginHorizontal="@dimen/standard"
        android:text="@string/muammar_hanif"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_1"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard"
        android:text="@string/email"
        android:textSize="@dimen/large_text_1"
        app:layout_constraintTop_toBottomOf="@id/tv_display_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginHorizontal="@dimen/standard"
        android:text="@string/email_value"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_1"
        app:layout_constraintTop_toBottomOf="@id/tv_email"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard"
        android:text="@string/phone_number"
        android:textSize="@dimen/large_text_1"
        app:layout_constraintTop_toBottomOf="@id/tv_user_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginHorizontal="@dimen/standard"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_1"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"/>

</androidx.constraintlayout.widget.ConstraintLayout>