<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.sourcelist.SourceFragment">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="cyberse.news.ui.main.MainViewModel"/>

        <variable
            name="hideTitle"
            type="Boolean"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ib_back"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back"
                    android:padding="@dimen/standard"
                    android:onClick="@{() -> viewModel.onClickGoBack()}"
                    app:srcCompat="@drawable/ic_arrow_back"
                    app:tint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small"
                    android:visibility="@{hideTitle ? View.GONE : View.VISIBLE}"
                    android:maxLines="1"
                    android:text="@string/source_list"
                    android:textSize="@dimen/large_text_2"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    app:layout_constraintTop_toTopOf="@id/ib_back"
                    app:layout_constraintBottom_toBottomOf="@id/ib_back"
                    app:layout_constraintStart_toEndOf="@id/ib_back"
                    app:layout_constraintEnd_toStartOf="@id/iv_search"/>

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/medium"
                    android:src="@drawable/ic_search"
                    android:contentDescription="@string/see_full_article"
                    app:tint="@color/white"
                    app:layout_constraintTop_toTopOf="@id/ib_back"
                    app:layout_constraintBottom_toBottomOf="@id/ib_back"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_empty_state"
            android:layout_width="@dimen/image_material"
            android:layout_height="@dimen/image_material"
            android:layout_marginTop="-50dp"
            android:contentDescription="@string/empty_source_list"
            android:visibility="gone"
            app:tint="@color/empty_state"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:visibility="gone"
            android:text="@string/empty_source_list"
            android:textSize="@dimen/large_text_1"
            android:textColor="@color/empty_state"
            app:layout_constraintTop_toBottomOf="@id/iv_empty_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.skydoves.androidveil.VeilRecyclerFrameView
                style="@style/VeilRecyclerView"
                android:id="@+id/sources"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                app:veilFrame_layout="@layout/item_source"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>